--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,5 +1,6 @@
 Changes in 4.7.3
 
+* Maintenance release with enhancements and bug fixes.
 * Fixed: 'Export to disk' checkbox state inconsistencies for new assets.
 * Fixed: Logout issue in Classic admin theme.
 * Fixed: A bug when PHP 'mbstring' extension is disabled.
