--- a/textpattern/setup/lang/ca.ini
+++ b/textpattern/setup/lang/ca.ini
@@ -29,6 +29,9 @@ go_to_login="Inicia sessió"
 installation_postamble="Per seguretat, ara hauries d’esborrar el directori <code>setup</code> del teu directori <code>{setuppath}</code>. Consulta de quan en quan la pestanya de Diagnòstics de l’Administració per si hi ha anuncis d’actualitzacions o suggeriments per resoldre problemes."
 missing_db_details="Manca l’informació de la base de dades."
 multisite_admin_domain="Subdomini d’admin"
+multisite_config="Detalls de la instal·lació de múltiples llocs web"
+multisite_cookie_domain="Domini de la galeta (generalment domini principal)"
+multisite_please_enter_details="Si us plau, introdueix la informació del domini per l’àrea d’administració d’aquest lloc web."
 mysql_database="Base de dades MySQL"
 mysql_login="Usuari (login) MySQL"
 mysql_password="Contrasenya MySQL"
