--- a/textpattern/lang/README
+++ b/textpattern/lang/README
@@ -1,5 +1,5 @@
 If you are interested in translating Textpattern into your own language,
-please visit http://translate.textpattern.com/.
+please visit https://translate.textpattern.com/.
 
 == Language Files [lang].ini ==
 
