Latest translations from Crowdin

--- a/textpattern/lang/lv.ini
+++ b/textpattern/lang/lv.ini
@@ -63,6 +63,7 @@ you_have_been_registered="Jūs tikāt reģistrēts kā līdzveidotajs lapai"
 advanced_options="Paplašinātas iespējas"
 auto_dst="Automātiski mainīt <abbr title=\"Vasaras laiks\">DST</abbr> uzstādījumu?"
 body="Pamatteksts"
+cannot_delete="Nevar izdzēst {thing}."
 cannot_instantiate_theme="Tēmai <strong>{name}</strong> ({class}) neizdevās ielādēties no faila {path}. Tā vietā tika izmantota klasiskā tēma."
 changeauthor="Mainīt autoru"
 changecategory="Mainīt kategoriju"
@@ -89,6 +90,7 @@ img_dir="Attēlu mape"
 import_from_disk="Importēt no diska"
 invalid_argument="Nederīgs arguments"
 invalid_article_id="Nederīgs raksta ID"
+invalid_json="Nederīgi JSON faili: <strong>{list}</strong>."
 invalid_postdate="Nederīgs datums vai laiks."
 is_dst="Ievērot vasaras laika maiņu?"
 leave_text_untouched="Atstāt tekstu kā ir"
@@ -150,6 +152,7 @@ timestamp="Ieraksta laiks"
 title_body="Virsraksts un pamatteksts"
 title_body_excerpt="Virsraksts, pamatteksts un kopsavilkums"
 unmoderated="Nemoderēti"
+update_from_disk="Atjaunināt no diska"
 use_textile="Izmantot Textile"
 view_html="Apskatīt HTML atzīmes"
 view_html_short="HTML"
@@ -326,6 +329,7 @@ list="Saraksts"
 list_articles="Ierakstu saraksts"
 list_categories="Kategoriju saraksts"
 list_links="Saišu saraksts"
+list_options="Saraksta iespējas"
 logged_in_as="Ierakstījies kā"
 login="Pieslēgties"
 login_to_textpattern="Ierakstīties Textpattern"
@@ -440,6 +444,7 @@ with_selected="Ar iezīmēto:"
 yes="Jā"
 [css]
 all_stylesheets="Visas stilu lapas"
+create_css="Jauns stils"
 css_already_exists="Stilu lapa <strong>{name}</strong> jau eksistē."
 css_code="Stila kods"
 css_name="Stila nosaukums"
