--- a/textpattern/lang/tr.ini
+++ b/textpattern/lang/tr.ini
@@ -711,6 +711,7 @@ default_event="Varsayılan panel"
 default_publish_status="Varsayılan yayın durumu"
 doctype="Doctype"
 module_pophelp="Admin tarafında satır içi yardım bağlantıları gösterilsin mi"
+enable_dev_preview="Geliştirme tema önizleme etkinleştirilsin mi?"
 enable_short_tags="Kısa etiket desteğini etkinleştir"
 enable_xmlrpc_server="XML-RPC sunucusunu etkinleştirilsin mi?"
 expire_logs_after="Kayıtlar kaç gün sonra silinsin?"
