--- a/textpattern/setup/lang/es.ini
+++ b/textpattern/setup/lang/es.ini
@@ -3,7 +3,7 @@ lang_name="Español"
 lang_code="es"
 lang_dir="ltr"
 [setup]
-about_to_create="Vas a crear la base de datos e introducir valores en ella."
+about_to_create="Estás a punto de crear y poblar la base de datos. En esta fase también necesitarás configurar una cuenta de usuario administrador."
 add_config_file="Añadir archivo de configuración"
 admin_theme="Tema de interfaz de administración"
 already_installed="Parece que Textpattern ya está instalado. Si quieres realizar una instalación limpia, por favor, elimina <code>config.php</code> de tu directorio <code>{configpath}</code> e inténtalo de nuevo."
