--- a/textpattern/lang/en-us.ini
+++ b/textpattern/lang/en-us.ini
@@ -354,6 +354,7 @@ keywords="Keywords"
 label="Label"
 last_modification="Last modification"
 last_modified="Last modified"
+lightswitch="Toggle light/dark mode"
 link="Link"
 links="Links"
 list="List"
