--- a/textpattern/lang/ca.ini
+++ b/textpattern/lang/ca.ini
@@ -354,6 +354,7 @@ keywords="Paraules clau"
 label="Etiqueta"
 last_modification="Modificat per última vegada"
 last_modified="Darrera modificació"
+lightswitch="Alterna estil clar/fosc"
 link="Enllaç"
 links="Només enllaços"
 list="Llista"
