--- a/textpattern/lang/cs.ini
+++ b/textpattern/lang/cs.ini
@@ -354,6 +354,7 @@ keywords="Klíčová slova"
 label="Popis"
 last_modification="Poslední úprava"
 last_modified="Naposledy upraveno"
+lightswitch="Vzhled prostředí světlý/tmavý"
 link="Jen odkaz"
 links="Jen odkaz"
 list="Seznam"
