--- a/textpattern/lang/sv.ini
+++ b/textpattern/lang/sv.ini
@@ -354,6 +354,7 @@ keywords="Nyckelord"
 label="Ledtext"
 last_modification="Senast ändrad"
 last_modified="Senast ändrad"
+lightswitch="Växla läge ljust/mörkt"
 link="Länkar"
 links="Länkar"
 list="Lista"
