--- a/textpattern/setup/lang/pt.ini
+++ b/textpattern/setup/lang/pt.ini
@@ -3,66 +3,66 @@ lang_name="Português (Portugal)"
 lang_code="pt"
 lang_dir="ltr"
 [setup]
-about_to_create="Está prestes a criar e a configurar as tabelas da base de dados."
-add_config_file="Junta ficheiro de config"
+about_to_create="Estás prestes a criar e a configurar as tabelas da base de dados."
+add_config_file="Adicionar ficheiro de configuração"
 admin_theme="Tema da Administração"
-already_installed="Parece que o Textpattern já está instalado. Se quiser fazer uma instalação de raíz (limpa), remova o ficheiro <code>config.php</code> da sua directoria <code>{configpath}</code> e tente de novo."
-back="Atrás"
-before_you_proceed="Antes de continuar"
+already_installed="Parece que o Textpattern já está instalado. Se quiseres fazer uma instalação de raíz (limpa), remove o ficheiro <code>config.php</code> da tua diretoria <code>{configpath}</code> e tenta de novo."
+back="Voltar para trás"
+before_you_proceed="Antes de continuares:"
 checking_database="A verificar a ligação à base de dados"
-choose_password="Escolha uma senha"
-config_php_does_not_match_input="O conteudo do <code>config.php</code> não é igual aos valores quq indicou. por favor, indira abaixo o texto exacto."
-config_php_not_found="O ficheiro de configuração não foi encontrado na localização esperada <strong>{file}</strong>. por favor, verifique a sua existência de novo."
+choose_password="Escolhe uma senha"
+config_php_does_not_match_input="O conteúdo do <code>config.php</code> não corresponde aos valores que indicaste. por favor, indica abaixo, o texto exato."
+config_php_not_found="O ficheiro de configuração não foi encontrado na localização esperada <strong>{file}</strong>. por favor, verifica a sua existência de novo."
 config_php_write_error="Houve um erro ao escrever a configuração do ficheiro."
 core_theme="Core: {theme}"
-create_config="crie um ficheiro chamado <code>config.php</code> na directoria <code>{configpath}</code> e copie o seguinte texto para o ficheiro que criou:"
-creating_config="Criando ficheiro config.php"
-creating_db_tables="Criando tabelas da Base de Dados"
+create_config="Cria um ficheiro chamado <code>config.php</code> na diretoria <code>{configpath}</code> e copia o seguinte texto para o ficheiro que criaste…"
+creating_config="A criar ficheiro config.php"
+creating_db_tables="A criar as tabelas da Base de Dados"
 db_cant_connect="Não é possível comunicar com a base de dados usando os valores fornecidos."
 db_connected="Ligação estabelecida"
-db_doesnt_exist="\"A base de dados {dbname} dão existe. Por favor, crie uma nova ou escolha outra já existente."
-db_must_exist="Note que a base de dados que especificar, deverá ter sido criada previamente, já que o Textpattern não a criará por si."
+db_doesnt_exist="A base de dados <strong>{dbname}</strong> dão existe. Por favor, cria uma nova ou escolhe outra já existente."
+db_must_exist="Nota que a base de dados que especificaste, deverá ter sido criada, previamente, já que o Textpattern não a irá criar."
 did_it="Tá feito!"
-email_required="Por favor, introduza um endereço de email válido."
+email_required="Por favor, introduz um endereço de email válido."
 get_started="Avançar!"
-go_to_login="Faça login agora"
-installation_postamble="Por razões de segurança, deve agora remover a pasta <code>setup</code> do seu site Textpattern. por favor, verifique o painel Admin Diagnosticos de tempo em tempo, para ver anuncios de actualizações ou ajudas à resolução de problemas."
+go_to_login="Entrar agora"
+installation_postamble="Por razões de segurança, agora deves remover a pasta <code>setup</code> do teu site Textpattern. Por favor, verifica o painel Diagnósticos de Admin de vez em quando, para ver anúncios de atualizações ou ajudas à resolução de problemas."
 missing_db_details="Os detalhes da base de dados estão em falta."
 multisite_admin_domain="Subdomínio de admin"
 multisite_config="Detalhes de instalação de multi-sites"
-multisite_cookie_domain="Cookie de domínio (geralmente, domínio principal)"
-multisite_please_enter_details="Por favor, digite as informações de domínio para a área de administração deste site."
+multisite_cookie_domain="Domínio de cookie (geralmente, domínio principal)"
+multisite_please_enter_details="Por favor, digita as informações de domínio para a área de administração deste site."
 mysql_database="Nome da base de dados MySQL"
-mysql_login="Nome de acesso MySQL"
+mysql_login="Nome de utilizador MySQL"
 mysql_password="Senha MySQL"
 mysql_server="Servidor MySQL"
-my_site="O nome do meu sítio"
-my_slogan="O slogan do meu sítio"
-name_required="por favor, indique um nome de login válido"
-need_details="Inevitavelmente, precisamos de alguns detalhes"
-next_step="Prox"
-pass_required="Por favor, indique uma palavra passe forte"
-please_enter_url="Por favor, introduza o endereço web do seu sítio"
-please_go_back="por favor, volte atrás, rectifique os detalhes incorrectos e tente este processo de novo."
+my_site="Meu site"
+my_slogan="O slogan do meu síte"
+name_required="Por favor, indica um nome de login válido."
+need_details="Inevitavelmente, precisamos de alguns detalhes…"
+next_step="Próximo"
+pass_required="Por favor, indica uma senha forte."
+please_enter_url="Por favor, introduz o endereço web do teu site."
+please_go_back="Por favor, volta atrás, retifica os detalhes incorrectos e tenta este processo de novo."
 populate_db="Preencher a Base de Dados"
-prefix_bad_characters="O prefixo {dbprefix} da tabela contêm caracteres não autorizados. O primeiro caracter deverá pertencer ao conjunto <strong>a-zA-Z_</strong> e todos os seguintes deverão pertencer ao conjunto <strong>a-zA-Z0-9_</strong>."
+prefix_bad_characters="O prefixo <strong>{dbprefix}</strong> da tabela contém caracteres não autorizados. O primeiro caractere deverá pertencer ao conjunto <strong>a-zA-Z_</strong> e todos os seguintes deverão pertencer ao conjunto <strong>a-zA-Z0-9_</strong>."
 progress_steps="Existem 4 passos neste processo de instalação:"
-public_theme="Tema da parte frontal"
+public_theme="Tema público"
 setup_comment_invite="Pode comentar"
 setup_help="Ajuda"
-setup_login="Escolha o seu nome de acesso (por favor use apenas os caracteres básicos e espaços)"
+setup_login="Escolhe o teu nome de acesso (por favor, usa apenas os caracteres básicos e espaços)"
 setup_show_password="Mostrar senha"
 set_db_details="Definir detalhes da Base de Dados"
-set_temp_dir_prefs="Desculpe, mas não conseguimos encontrar um directório gravável para armazenar arquivos temporários. Por favor, visite as <strong>Preferências Avançadas </strong> e ajuste o caminho do directório <strong> temporário</strong> para atender às suas n"
+set_temp_dir_prefs="Pedimos desculpa, mas não conseguimos encontrar um diretório gravável para armazenar ficheiros temporários. Por favor, visita as <strong>Preferências Avançadas </strong> e ajusta o <strong>caminho do diretório temporário</strong> para atender às tuas necessidades."
 site_config="Configuração do Site"
-site_url="URL do sítio"
-tables_exist="Parece que as tabelas em <strong>{dbname}</strong> já existem. Se você deseja continuar a instalação, exclua as tabelas existentes, ou escolha um prefixo para tabelas diferente."
-table_prefix="Prefixo da tabela"
-thanks_for_interest="Obrigado pelo seu interesse no Textpattern."
+site_url="URL do Site"
+tables_exist="Parece que as tabelas em <strong>{dbname}</strong> já existem. Se desejas continuar a instalação, exclui as tabelas existentes, ou escolhe um prefixo para tabelas diferente."
+table_prefix="Prefixo da tabela (opcional)"
+thanks_for_interest="Obrigado pelo teu interesse pelo Textpattern"
 that_went_well="Tudo correu bem! As tabelas da base de dados foram criadas e configuradas."
 using_db="A usar a base de dados {dbname}"
-warn_mail_unavailable="A função <code>mail()</code> está em falta na sua instalação do php. Assim sendo, não poderá enviar emails a partir do Textpattern, limitando algumas das funcionalidades."
+warn_mail_unavailable="A função <code>mail()</code> está em falta na tua instalação do PHP. Assim sendo, não poderás enviar emails a partir do Textpattern, limitando algumas das funcionalidades."
 welcome_to_textpattern="Bem-vindo ao Textpattern"
-your_email="O seu endereço de email"
-your_full_name="O seu nome completo"
-you_can_access="Deverá poder aceder ao <a href=\"index.php\">interface principal</a> com o seu nome de acesso e a sua senha."
+your_email="O teu endereço de email"
+your_full_name="O teu nome completo"
+you_can_access="Deverás poder aceder à <a href=\"index.php\">interface principal</a> com o teu nome de acesso e a tua senha."
