--- a/textpattern/lang/fr.ini
+++ b/textpattern/lang/fr.ini
@@ -354,6 +354,7 @@ keywords="Mots-clés"
 label="Label"
 last_modification="Dernière modification"
 last_modified="Dernière modification"
+lightswitch="Basculer le mode Clair/Sombre"
 link="Liens"
 links="Liens"
 list="Liste"
